# Roadef2020

./: CMakeLists.txt  README.md  roadef2020_J3.py
data/: A_01.json.xz  A_02.json.xz  A_03.json.xz  A_04.json.xz  A_05.json.xz  A_06.json.xz  A_07.json.xz  A_08.json.xz  A_09.json.xz  A_10.json.xz  A_11.json.xz  A_12.json.xz  A_13.json.xz  A_14.json.xz  A_15.json.xz  B_01.json.xz  B_02.json.xz  B_03.json.xz  B_04.json.xz  B_05.json.xz  B_06.json.xz  B_07.json.xz  B_08.json.xz  B_09.json.xz  B_10.json.xz  B_11.json.xz  B_12.json.xz  B_13.json.xz  B_14.json.xz  B_15.json.xz  C_01.json.xz  C_02.json.xz  C_03.json.xz  C_04.json.xz  C_05.json.xz  C_06.json.xz  C_07.json.xz  C_08.json.xz  C_09.json.xz  C_10.json.xz  (+20 more)
include/: bs_analyzer.hpp  bs_optimizer.hpp  ls_optimizer.hpp  measures.hpp  move.hpp  problem.hpp
py/: checker.py  common.py  constraint_gen.py  milp.py  quantile.py  solver_lazy.py
solutions/: A_01.txt  A_02.txt  A_03.txt  A_04.txt  A_05.txt  A_06.txt  A_08.txt  A_10.txt  A_11.txt  A_12.txt  A_13.txt  A_14.txt  A_15.txt  B_01.txt  B_02.txt  B_03.txt  B_04.txt  B_05.txt  B_06.txt  B_07.txt  B_08.txt  B_09.txt  B_10.txt  B_11.txt  B_12.txt  B_13.txt  B_14.txt
src/: bs_analyzer.cpp  bs_optimizer.cpp  ls_optimizer.cpp  main.cc  main.cpp  measures.cpp  move.cpp  problem.cpp
